@@ -38,16 +38,13 @@ public abstract class SearchMatcher
 	 * Returns the offset of the first match of the specified text
 	 * within this matcher.
 	 * @param text The text to search in
-	 * @param start True if the start of the segment is the beginning of the
-	 * buffer
-	 * @param end True if the end of the segment is the end of the buffer
+	 * @param start True if the start of the text is the beginning of a line
+	 * @param end True if the end of the text is the end of a line
 	 * @param firstTime If false and the search string matched at the start
 	 * offset with length zero, automatically find next match
 	 * @param reverse If true, searching will be performed in a backward
 	 * direction.
-	 * @return an array where the first element is the start offset
-	 * of the match, and the second element is the end offset of
-	 * the match
+	 * @return A {@link Match} object.
 	 * @since jEdit 4.3pre5
 	 */
 	public abstract Match nextMatch(CharSequence text, boolean start,
